--- a/Flaintartist/Size.xib
+++ b/Flaintartist/Size.xib
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,67 +16,61 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CaptureDetailsVC" customModule="Flaintartist" customModuleProvider="target">
             <connections>
                 <outlet property="heightLbl" destination="DgM-Lm-bUX" id="1G2-an-gAA"/>
-                <outlet property="heightSlider" destination="Mq8-ev-PtS" id="Pcz-zN-TJo"/>
+                <outlet property="heightSlider" destination="Ess-hl-W3Y" id="Zjh-Zy-dIF"/>
                 <outlet property="widthLbl" destination="txu-zL-Zky" id="GyM-Ks-3O7"/>
                 <outlet property="widthSlider" destination="gk2-Dq-0CU" id="Ffs-Iy-9qF"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="kYf-0L-FQf">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="290"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <slider opaque="NO" multipleTouchEnabled="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="gk2-Dq-0CU">
-                    <rect key="frame" x="30" y="103" width="315" height="31"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="zhL-LW-DLw"/>
-                    </constraints>
+                <slider opaque="NO" multipleTouchEnabled="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="20" minValue="20" maxValue="200" translatesAutoresizingMaskIntoConstraints="NO" id="gk2-Dq-0CU">
+                    <rect key="frame" x="30" y="234" width="315" height="31"/>
                     <color key="minimumTrackTintColor" red="0.42655369640000002" green="0.475846082" blue="0.4802647531" alpha="1" colorSpace="calibratedRGB"/>
                     <connections>
                         <action selector="SliderValueChanged:" destination="-1" eventType="valueChanged" id="ZzT-QC-Au9"/>
                     </connections>
                 </slider>
-                <slider opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="Mq8-ev-PtS">
-                    <rect key="frame" x="30" y="25" width="315" height="61"/>
-                    <color key="minimumTrackTintColor" red="0.42655369640000002" green="0.475846082" blue="0.4802647531" alpha="1" colorSpace="calibratedRGB"/>
-                    <connections>
-                        <action selector="SliderValueChanged:" destination="-1" eventType="valueChanged" id="3ZX-dQ-Ans"/>
-                    </connections>
-                </slider>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Height" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DgM-Lm-bUX">
-                    <rect key="frame" x="47" y="0.0" width="120" height="16"/>
+                    <rect key="frame" x="32" y="115" width="120" height="16"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="120" id="mkW-qg-b3a"/>
+                        <constraint firstAttribute="width" constant="120" id="HbP-V1-y6q"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                     <color key="textColor" red="0.12637259070000001" green="0.12639245390000001" blue="0.1263653636" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Width" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="txu-zL-Zky">
-                    <rect key="frame" x="208" y="0.0" width="120" height="16"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="120" id="0iT-8P-oF5"/>
-                    </constraints>
+                    <rect key="frame" x="223" y="115" width="120" height="16"/>
                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                     <color key="textColor" red="0.12637259070000001" green="0.12639245390000001" blue="0.1263653636" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <slider opaque="NO" multipleTouchEnabled="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="20" minValue="20" maxValue="200" translatesAutoresizingMaskIntoConstraints="NO" id="Ess-hl-W3Y">
+                    <rect key="frame" x="30" y="175" width="315" height="31"/>
+                    <color key="minimumTrackTintColor" red="0.42655369640000002" green="0.475846082" blue="0.4802647531" alpha="1" colorSpace="calibratedRGB"/>
+                    <connections>
+                        <action selector="SliderValueChanged:" destination="-1" eventType="valueChanged" id="f2n-YM-5IQ"/>
+                    </connections>
+                </slider>
             </subviews>
             <constraints>
-                <constraint firstItem="DgM-Lm-bUX" firstAttribute="leading" secondItem="kYf-0L-FQf" secondAttribute="leading" constant="47" id="HWt-df-PlR"/>
-                <constraint firstAttribute="bottom" secondItem="gk2-Dq-0CU" secondAttribute="bottom" constant="67" id="XSb-Rh-gEq"/>
-                <constraint firstAttribute="trailing" secondItem="txu-zL-Zky" secondAttribute="trailing" constant="47" id="aQk-NG-54K"/>
-                <constraint firstItem="txu-zL-Zky" firstAttribute="top" secondItem="kYf-0L-FQf" secondAttribute="top" id="c5o-Ou-AOi"/>
-                <constraint firstItem="Mq8-ev-PtS" firstAttribute="leading" secondItem="gk2-Dq-0CU" secondAttribute="leading" id="mfO-mK-1tU"/>
-                <constraint firstItem="Mq8-ev-PtS" firstAttribute="leading" secondItem="kYf-0L-FQf" secondAttribute="leading" constant="32" id="oSS-7X-qXQ"/>
-                <constraint firstItem="gk2-Dq-0CU" firstAttribute="top" secondItem="Mq8-ev-PtS" secondAttribute="bottom" constant="18" id="sa7-J8-tbI"/>
-                <constraint firstItem="Mq8-ev-PtS" firstAttribute="trailing" secondItem="gk2-Dq-0CU" secondAttribute="trailing" id="tUq-1n-KeS"/>
-                <constraint firstItem="Mq8-ev-PtS" firstAttribute="top" secondItem="txu-zL-Zky" secondAttribute="bottom" constant="9" id="uiT-7A-ed4"/>
-                <constraint firstItem="DgM-Lm-bUX" firstAttribute="top" secondItem="kYf-0L-FQf" secondAttribute="top" id="vM4-8I-gd9"/>
-                <constraint firstItem="Mq8-ev-PtS" firstAttribute="centerX" secondItem="kYf-0L-FQf" secondAttribute="centerX" id="vZB-Ai-JRZ"/>
+                <constraint firstItem="Ess-hl-W3Y" firstAttribute="trailing" secondItem="gk2-Dq-0CU" secondAttribute="trailing" id="279-7y-bhv"/>
+                <constraint firstItem="DgM-Lm-bUX" firstAttribute="baseline" secondItem="txu-zL-Zky" secondAttribute="baseline" id="2ZU-Kh-JuK"/>
+                <constraint firstItem="DgM-Lm-bUX" firstAttribute="leading" secondItem="kYf-0L-FQf" secondAttribute="leading" constant="32" id="Fe1-ZG-VBP"/>
+                <constraint firstItem="DgM-Lm-bUX" firstAttribute="top" secondItem="kYf-0L-FQf" secondAttribute="top" constant="115" id="GCq-l7-NuC"/>
+                <constraint firstItem="DgM-Lm-bUX" firstAttribute="leading" secondItem="Ess-hl-W3Y" secondAttribute="leading" id="Gej-H6-v7T"/>
+                <constraint firstItem="txu-zL-Zky" firstAttribute="trailing" secondItem="Ess-hl-W3Y" secondAttribute="trailing" id="SRm-GZ-Bwk"/>
+                <constraint firstItem="gk2-Dq-0CU" firstAttribute="top" secondItem="Ess-hl-W3Y" secondAttribute="bottom" constant="29" id="Z3F-OG-qzA"/>
+                <constraint firstItem="txu-zL-Zky" firstAttribute="leading" secondItem="DgM-Lm-bUX" secondAttribute="trailing" constant="71" id="aBQ-sJ-tL5"/>
+                <constraint firstItem="Ess-hl-W3Y" firstAttribute="leading" secondItem="gk2-Dq-0CU" secondAttribute="leading" id="crr-oq-b6R"/>
+                <constraint firstItem="Ess-hl-W3Y" firstAttribute="top" secondItem="DgM-Lm-bUX" secondAttribute="bottom" constant="44" id="imb-PA-ZNd"/>
+                <constraint firstItem="Ess-hl-W3Y" firstAttribute="centerX" secondItem="kYf-0L-FQf" secondAttribute="centerX" id="w0e-ZJ-vUs"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-47.5" y="48"/>
+            <point key="canvasLocation" x="-203" y="47"/>
         </view>
     </objects>
 </document>
