--- a/Flaintartist/Details.xib
+++ b/Flaintartist/Details.xib
@@ -12,16 +12,17 @@
             <connections>
                 <outlet property="descTextView" destination="V4m-aU-9lG" id="TLu-6e-CoQ"/>
                 <outlet property="priceTextField" destination="4ef-1G-7no" id="TkY-lY-rcR"/>
+                <outlet property="privateSwitch" destination="QOu-MG-FDt" id="L0U-AA-jTU"/>
                 <outlet property="titleTextField" destination="JpA-rw-09D" id="bjW-bW-89D"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="fik-gy-BTa" customClass="DetailsView">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="290"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="376"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="nmP-o0-A5Y">
-                    <rect key="frame" x="25" y="30" width="325" height="248"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="nmP-o0-A5Y">
+                    <rect key="frame" x="25" y="30" width="325" height="242"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="yYt-Ys-EpV">
                             <rect key="frame" x="0.0" y="0.0" width="325" height="163"/>
@@ -33,7 +34,7 @@
                                         <constraint firstAttribute="height" constant="45" id="sBa-ia-vgV"/>
                                     </constraints>
                                     <color key="textColor" red="0.12637259070000001" green="0.12639245390000001" blue="0.1263653636" alpha="1" colorSpace="calibratedRGB"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="words" keyboardType="decimalPad"/>
                                 </textField>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YZZ-Rk-2Xi">
@@ -51,7 +52,7 @@
                                         <constraint firstAttribute="width" constant="325" id="ptx-6x-wth"/>
                                     </constraints>
                                     <color key="textColor" red="0.12637259070000001" green="0.12639245390000001" blue="0.1263653636" alpha="1" colorSpace="calibratedRGB"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                                 </textField>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QL0-aA-tkI">
@@ -69,7 +70,7 @@
                                         <constraint firstAttribute="height" constant="45" id="n7U-Ra-DNp"/>
                                     </constraints>
                                     <color key="textColor" red="0.12637259070000001" green="0.12639245390000001" blue="0.1263653636" alpha="1" colorSpace="calibratedRGB"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                                 </textView>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eEd-PI-1q9">
@@ -82,29 +83,48 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="4xE-rH-yuq">
-                            <rect key="frame" x="0.0" y="168" width="325" height="80"/>
+                            <rect key="frame" x="0.0" y="173" width="325" height="69"/>
                             <subviews>
-                                <stackView opaque="NO" contentMode="scaleToFill" spacing="150" translatesAutoresizingMaskIntoConstraints="NO" id="vtN-2S-ydl">
-                                    <rect key="frame" x="0.0" y="0.0" width="325" height="31"/>
+                                <stackView opaque="NO" contentMode="scaleToFill" spacing="120" translatesAutoresizingMaskIntoConstraints="NO" id="vtN-2S-ydl">
+                                    <rect key="frame" x="0.0" y="0.0" width="325" height="20"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Private" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bdg-nm-eQF">
-                                            <rect key="frame" x="0.0" y="0.0" width="126" height="31"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="QRH-FS-0Yc">
+                                            <rect key="frame" x="0.0" y="0.0" width="151" height="20"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Lock Filled-20" translatesAutoresizingMaskIntoConstraints="NO" id="PEm-6M-jus">
+                                                    <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="Je6-Tp-kzv"/>
+                                                        <constraint firstAttribute="width" constant="20" id="mXh-e6-Yqg"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Private " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bdg-nm-eQF">
+                                                    <rect key="frame" x="25" y="0.0" width="126" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="126" id="QGX-k1-5bN"/>
+                                                        <constraint firstAttribute="height" constant="20" id="S5K-Yb-eus"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
                                         <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="QOu-MG-FDt">
-                                            <rect key="frame" x="276" y="0.0" width="51" height="31"/>
+                                            <rect key="frame" x="271" y="0.0" width="56" height="20"/>
                                             <color key="onTintColor" red="0.19376453757286072" green="0.50850099325180054" blue="0.85232251882553101" alpha="1" colorSpace="calibratedRGB"/>
+                                            <connections>
+                                                <action selector="swichValueChanged:" destination="-1" eventType="valueChanged" id="Uwe-a4-w3D"/>
+                                            </connections>
                                         </switch>
                                     </subviews>
                                 </stackView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Private artworks will only appear in your gallery, but wont be available for rent. " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UFf-XL-DX2">
-                                    <rect key="frame" x="0.0" y="33" width="325" height="47"/>
+                                    <rect key="frame" x="0.0" y="22" width="325" height="47"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="47" id="hIm-Xe-dwI"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="11"/>
+                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
                                     <color key="textColor" red="0.42655369639396667" green="0.47584608197212219" blue="0.48026475310325623" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
@@ -118,7 +138,10 @@
                 <constraint firstItem="nmP-o0-A5Y" firstAttribute="centerX" secondItem="fik-gy-BTa" secondAttribute="centerX" id="sP8-d8-vaj"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-118" y="37"/>
+            <point key="canvasLocation" x="-118.5" y="80"/>
         </view>
     </objects>
+    <resources>
+        <image name="Lock Filled-20" width="20" height="20"/>
+    </resources>
 </document>
